Changelog
=========

Version 1.10 - unreleased
-------------------------

* Fix broken creation of Plone 3.1(.x) sites.
  [wichert]


Version 1.9
-----------

* Install Plone 3.1 as default option.
  [wichert]

* Fixed a missing 'import os' in the plone2_theme template. [davisagli]

* Fix an ambiguous question in the silva_buildout template, and update
  the generated README file. [thefunny]


Version 1.8 
-----------

* fixed the recipe template buildout.cfg generation, thanks Kai ;)
  [tarek]

Version 1.7
-----------

* Update the templates to have README.txt and HISTORY.txt in valid
  restructured format and use those as the package's long description.
  This automatically gives packages a more readable page on PyPI
  (and PSC with Tarek's excellent changes).
  [wichert]

* Adjust the trove classifiers on the packages to not claim incorrect
  frameworks: we should only claim frameworks on which the package
  can run directly. So, for example, do not claim Zope2 of we also need
  Plone on top of Zope2.
  [wichert]
  

Version 1.6
-----------

* Add templates for a Silva buildout.
  [thefunny]

* Add a metadata.xml to all generated GenericSetup profiles. This is
  required by new versions of GenericSetup.
  [wichert]

* For nested namespace packages we need to declare both namespace
  levels as namespace packages. This is a requirement for current
  versions of setuptools.
  [wichert]

* Use Plone 3.0.6 as default version for new Plone hosting buildouts
  [wichert]


Version 1.5.1
-------------

* Fix #2 (missing import in 'hosting.py') at
  http://plone.org/products/zopeskel/issues/2
  [nouri]

Version 1.5
-----------

* added a new local command into archetype template to inject
  new content types [spanky] 

* added a doctest for each template, and refactored the package
  so we have one python module per template [tarek] 

* Refactored the zc.buildout recipe to provide structured documention
  that will render nicely on PyPI, added comments for recipe authors